Changed name  from Four Boxes to Simplifier

--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -268,9 +268,9 @@ respectively. In other words, edges are not connected in unexpected ways.
 %-----------
 
 %======================================
-\section{Four Boxes}\label{section:FourBoxes}
+\section{Simplifier}\label{section:Simplifier}
 
-\input{global_reductions/four_boxes}
+\input{global_reductions/simplifier.tex}
 
 %======================================
 \section{Isolated Subflow Removal}\label{section:IsolatedSubflowRemoval}
