--- a/global_reductions/simplifier.tex
+++ b/global_reductions/simplifier.tex
@@ -1,9 +1,9 @@
 \TODO{Alessio: You were right about the mistake in the following definition. I added a remark.}
 
 %--------------------------------
-\newcommand{\frfb}{{\mathsf{fb}}}
+\newcommand{\frfb}{{\mathsf{sf}}}
 \begin{definition}\label{definition:FourBoxes}
-We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes}\index{four boxes reduction}) as follows, for any atomic flows $\phi$ and $\psi$ that do not contain any interaction or cut vertices:
+We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{simple form}\index{simplifier!reduction}) as follows, for any atomic flows $\phi$ and $\psi$ that do not contain any interaction or cut vertices:
 \[
 \atomicflow{
 (-8, 6)*{\afvjdm4{\boldsymbol{\epsilon_1}}{}};
