Rephrased main result

--- a/main_result.tex
+++ b/main_result.tex
@@ -1,22 +1,32 @@
 \chapter{Main Result}\label{chapter:MainResult}
 
-\begin{proposition}
-Given a derivation $\Phi$ with atomic flow $\phi$, and a polarity assignment $\pi$ for $\phi$. Let occurrences of $a_1$, $\dots$, $a_n$ map to all the edges in $\phi$ with polarity assignment $\ppl$ and occurrences of $\bar a_1$, $\dots$, $\bar a_n$ map to all the edges in $\phi$ with polarity assignment $\pmi$, then
+\begin{theorem}
+Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$, then
 \begin{itemize}
-\item if $\Phi'=\ISR(\dots\ISR(\Simpl(\Phi,\pi),a_1),\dots,a_n)$, and $\Phi''=\ISR(\dots\ISR(\Simpl(\Phi',\bar\pi),\bar a_1),\dots,\bar a_n)$ is weakly streamlined, then
+\item if
 \begin{itemize}
-\item $\Phi''$ is weakly streamlined; and
-\item the size of $\Phi''$ depends exponentially on the size of $\Phi$
-\end{itemize}; and
-\item if $\Phi'=\PB(\dots\PB(\Phi,a_1),\dots,a_n)$, then
-\begin{itemize}
-\item $\Phi'$ is weakly streamlined; and
-\item the size of $\Phi'$ depends exponentially on the size of $\Phi$
-\end{itemize}; and
-\item if $\Phi'=\MISR(\Simpl(\Phi,\pi),a_1,\dots,a_n)$ and $\Phi''=\MISR(\Simpl(\Phi',\bar \pi),\bar a_1,\dots,\bar a_n)$, then
-\begin{itemize}
-\item $\Phi''$ is weakly streamlined; and
-\item the size of $\Phi''$ depends at most quasipolynomially on the size of $\Phi$
-\end{itemize}.
+\item $\Phi'=\ISR(\dots\ISR(\Simpl(\Phi,a_1,\dots,a_n),a_1),\dots,a_n)$, and
+\item $\Phi''=\ISR(\dots\ISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1),\dots,\bar a_n)$,
 \end{itemize}
-\end{proposition}
+then
+\begin{itemize}
+\item $\Phi''$ is weakly streamlined, and
+\item the size of $\Phi''$ depends at most exponentially on the size of\/ $\Phi$;
+\end{itemize}
+\item if\/ $\Phi'=\PB(\dots\PB(\Phi,a_1),\dots,a_n)$, then
+\begin{itemize}
+\item $\Phi'$ is weakly streamlined, and
+\item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$; and
+\end{itemize}
+\item if
+\begin{itemize}
+\item $\Phi'=\MISR(\Simpl(\Phi,a_1,\dots,a_n),a_1,\dots,a_n)$, and
+\item $\Phi''=\MISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1,\dots,\bar a_n)$,
+\end{itemize}
+then
+\begin{itemize}
+\item $\Phi''$ is weakly streamlined, and
+\item the size of\/ $\Phi''$ depends at most quasipolynomially on the size of\/ $\Phi$.
+\end{itemize}
+\end{itemize}
+\end{theorem}
