--- a/main_result.tex
+++ b/main_result.tex
@@ -31,3 +31,28 @@ then
 \end{itemize}
 \end{itemize}
 \end{theorem}
+
+\begin{proof}
+The statements follow by Proposition~\vref{proposition:Simplifier}, Proposition~\vref{proposition:IsolatedSubflowRemover}, Proposition~\vref{proposition:PathBreaker} and Proposition~\vref{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}.
+\end{proof}
+%----------
+
+%---------------------------------------------------
+\begin{corollary}\label{corollary:SuperStreamlining}
+Given a derivation (resp., proof)\/ $\Phi$, there exists a super-streamlined derivation (resp., cut-free proof)\/ $\Psi$ with the same premiss and conclusion as\/ $\Phi$, such that the size of\/ $\Psi$ depends at most quasipolynomially on the size of\/ $\Phi$.
+\end{corollary}
+
+\begin{proof}
+By Theorem~\ref{theorem:WeakStreamlining}, Theorem~\vref{theorem:SuperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+\end{proof}
+%----------
+
+%---------------------------------------------------
+\begin{corollary}\label{corollary:HyperStreamlining}
+Given a derivation\/ $\Phi$, there exists a hyper-streamlined derivation\/ $\Psi$ with the same premiss and conclusion as\/ $\Phi$.
+\end{corollary}
+
+\begin{proof}
+By Theorem~\ref{theorem:WeakStreamlining}, Theorem~\vref{theorem:SuperStreamlining}, Theorem~\vref{theorem:HyperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+\end{proof}
+%----------
